--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -22,12 +22,15 @@
 		</div>
 		<nav class="footer-nav-buttons">
 			<ul>
+					<li>
+						<a href="{{ path('app_legal_page_show', {'slug': 'mentions-legales'}) }}">Mentions légales</a>
+					</li>
 				<li>
-					<a href="">Plan du site</a>
-				</li>
-				<li>
-					<a href="{{ path('app_legal_page_show', {'slug': 'mentions-legales'}) }}">Mentions légales</a>
-				</li>
+						<a href="{{ path('app_legal_page_show', {'slug': 'politique-de-confidentilaite'}) }}">Politique de Confidentialité</a>
+					</li>
+					<li>
+						<a href="{{ path('app_legal_page_show', {'slug': 'conditions-generales-de-location'}) }}">Conditions Générales de Location</a>
+					</li>
 			</ul>
 		</nav>
 	</div>
