--- a/templates/legal_page/index.html.twig
+++ b/templates/legal_page/index.html.twig
@@ -37,4 +37,5 @@
 	</table>
 
 	<a href="{{ path('app_legal_page_new') }}">Créez un nouveau document</a>
+	<a href="{{ path('app_panel_admin')}}">Retour au tableau administrateur</a>
 {% endblock %}
