--- a/templates/legal_page/new.html.twig
+++ b/templates/legal_page/new.html.twig
@@ -8,4 +8,6 @@
     {{ include('legal_page/_form.html.twig') }}
 
     <a href="{{ path('app_legal_page_index') }}">Retour à la liste</a>
+	<a href="{{ path('app_panel_admin')}}">Retour au tableau administrateur</a>
+
 {% endblock %}
