--- a/templates/reservation/contract.html.twig
+++ b/templates/reservation/contract.html.twig
@@ -6,73 +6,71 @@
 
 {% block body %}
 
-	<div class="contract-container">
-		<header>
-			<h1>{{ legal_page.title }}
-				- Contrat de Location</h1>
-		</header>
-		<section class="reservation-summary">
-			<h2>
-				Récapitulatif de la Réservation</h2>
-			<p>
-				<strong>Dossier n°:</strong>
-				{{ reservation.dossierResa }}</p>
-			<p></p>
-			<p>
-				<strong>Locataire :
-				</strong>
-				{{ client.nom }}
-				{{ client.prenom }}
-				({{ client.email }})</p>
-			<p>
-				<strong>Période de Location :</strong>
-				Du
-				{{ reservation.dateResaDebut ? reservation.dateResaDebut|date('d/m/Y') : '' }}
-				au
-				{{ reservation.dateResaFin ? reservation.dateResaFin|date('d/m/Y') : '' }}
-			</p>
-			<p>
-				<strong>Catégorie Réservée:</strong>
-				{{ reservation.categorie.nom }}</p>
+	
 
-			<p>
-				<strong>Statut:</strong>
-				{{ reservation.statut }}</p>
-		</section>
+		<div class="contract-container">
+			<header>
+				<h1>{{ legal_page.title }}
+					- Contrat de Location</h1>
+			</header>
+			<section class="reservation-summary">
+				<h2>
+					Récapitulatif de la Réservation</h2>
+				<p>
+					<strong>Dossier n°:</strong>
+					{{ reservation.dossierResa }}</p>
+				<p></p>
+				<p>
+					<strong>Locataire :
+					</strong>
+					{{ client.nom }}
+					{{ client.prenom }}
+					({{ client.email }})</p>
+				<p>
+					<strong>Période de Location :</strong>
+					Du
+					{{ reservation.dateResaDebut ? reservation.dateResaDebut|date('d/m/Y') : '' }}
+					au
+					{{ reservation.dateResaFin ? reservation.dateResaFin|date('d/m/Y') : '' }}
+				</p>
+				<p>
+					<strong>Catégorie Réservée:</strong>
+					{{ reservation.categorie.nom }}</p>
 
-		<section class="contract-content">
-			<h2>Conditions Contractuelles</h2>
-			{% set contractContent = legal_page.content %}
+				<p>
+					<strong>Statut:</strong>
+					{{ reservation.statut }}</p>
+			</section>
 
-			{% set contractContent = contractContent|replace({
+			<section class="contract-content">
+				<h2>Conditions Contractuelles</h2>
+				{% set contractContent = legal_page.content %}
+
+				{% set contractContent = contractContent|replace({
         '[[NOM_CLIENT]]': client.nom|upper,
         '[[PRENOM_CLIENT]]': client.prenom,
         '[[PSEUDO_CLIENT]]': client.nom,
         '[[EMAIL_CLIENT]]': client.nom,
     }) %}
 
-			{% set contractContent = contractContent|replace({
+				{% set contractContent = contractContent|replace({
         '[[NUMERO_DOSSIER]]': reservation.dossierResa,
         '[[DATE_DEBUT]]': reservation.dateResaDebut|date('d/m/Y'),
         '[[DATE_FIN]]': reservation.dateResaFin|date('d/m/Y'),
-        '[[CATEGORIE_RESERVEE]]': reservation.categorie,
+        '[[CATEGORIE_RESERVEE]]': reservation.categorie.nom,
         '[[DATE_DU_JOUR]]': "now"|date('d/m/Y'),
-
-
-
     }) %}
 
+				<div class="content">
+					{{ contractContent|raw }}
+				</div>
+			</section>
 
-			<div class="content">
-				{{ contractContent|raw }}
+			<div class="contract-actions no-print">
+				<button class="btn-print" onclick="window.print();">
+					Imprimer/Télécharger le Contrat
+				</button>
+				<a class="btn" href="{{ path('app_reservation_show', {'id': reservation.id}) }}">Retour aux details</a>
 			</div>
-		</section>
-
-		<div class="contract-actions no-print">
-			<button class="btn-print" onclick="window.print();">
-				Imprimer/Télécharger le Contrat
-			</button>
-			<a class="btn" href="{{ path('app_reservation_show', {'id'}: reservation.id)}}">Retour aux details</a>
 		</div>
-	</div>
 {% endblock %}
